--- a/Web_Jsp2-1/WebRoot/WEB-INF/web.xml
+++ b/Web_Jsp2-1/WebRoot/WEB-INF/web.xml
@@ -8,4 +8,10 @@
   <welcome-file-list>
     <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
+  <session-config>
+  <!-- 配置session的过期时间(生命周期,单位:分钟) -->
+  		<session-timeout>
+  			1
+  		</session-timeout>
+  </session-config>
 </web-app>
